[metadata]
name = jot
version = 0.0.1
summary = Object-oriented JWT, JWS and JWE implementation
description-file =
    README.md

[files]
packages =
    jot

[global]
setup-hooks =
    pbr.hooks.setup_hook

[entry_points]
jot_signers =
    ^HS\d+$ = jot.signers.hmac_signer:HMACSigner
    ^RS\d+$ = jot.signers.rsa_signer:RSASigner
jot_ciphers =
    ^A\d+CBC-HS\d+$ = jot.ciphers.aes_cbc:AESCBCCipher
jot_deserializers =
    JWT = jot.deserializers.jwt_deserializer:deserialize_jwt
