[metadata]
name = jot
version = 0.0.1
summary = Object-oriented JWT, JWS and JWE implementation
description-file =
    README.md

[files]
packages =
    jot

[global]
setup-hooks =
    pbr.hooks.setup_hook

[entry_points]
jot_alg_ciphers =
    ^RSA1_5$ = jot.alg_ciphers.rsa1_5:RSA1_5Cipher
    ^A\d+KW$ = jot.alg_ciphers.aes_keywrap:AesKeywrapCipher
jot_enc_ciphers =
    ^A\d+CBC-HS\d+$ = jot.enc_ciphers.aes_cbc:AesCbcCipher
jot_signers =
    ^HS\d+$ = jot.signers.hmac_signer:HMACSigner
    ^RS\d+$ = jot.signers.rsa_signer:RSASigner
